@@ -48,6 +48,7 @@ OTHER CONTRIBUTORS
 	Howard Lightstone
 	Mike Lindner
 	Alexander Mai
+	Pierre Ossman
 	Alexander Rabi
 	James Roth
 	Albrecht Schlosser
